Closed Bug 132940 Opened 22 years ago Closed 22 years ago

The various SendFile functions in ptio.c should use pt_MapError

Categories

(NSPR :: NSPR, defect, P1)

4.1.2
defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wtc, Assigned: wtc)

Details

Attachments

(2 files)

The various SendFile functions in ptio.c should use
pt_MapError to map error codes.
Priority: -- → P1
Target Milestone: --- → 4.2
Attached patch Proposed patchSplinter Review
Fix checked into the tip of NSPR.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
I missed these last time.  This patch has been checked in.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: