Bugzilla bug 132940: the HPUX, Solaris, AIX, and Linux SendFile functions should call pt_MapError, if only to be consistent with the other I/O functions.